@@ -365,9 +365,9 @@ public class WiProProtocol extends AbstractProtocol {
             byte sessionId = header.getSessionID();
             Logger.d(CLASS_NAME + " incoming control frame:" + header.toString());
             if (frameData == FrameDataControlFrameType.HeartbeatACK.getValue()) {
-                WiProProtocol.this.handleProtocolHeartbeatACK(sessionId);
+                handleProtocolHeartbeatACK(sessionId);
             } else if (frameData == FrameDataControlFrameType.Heartbeat.getValue()) {
-                WiProProtocol.this.handleProtocolHeartbeat(sessionId);
+                handleProtocolHeartbeat(sessionId);
             } else if (frameData == FrameDataControlFrameType.StartService.getValue()) {
                 sendProtocolMessageProcessor.processStartSessionAck(header.getServiceType(),
                         getProtocolVersion(), sessionId);
