@@ -1,3 +1,6 @@
+[CW24]
+* SyncProxyTester: 2nd session is not registered if during BT scan both session already started
+
 [CW23]
 * SyncProxyAndroid SDK: Heartbeat timeout after EndService
 * SyncProxyTester: Data in RegisterAppInterface request, which SPT sends, do not match to data in autotest
